--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(glad)
 
 add_library(glad src/gl.c)
 
-target_include_directories(glad INTERFACE include)
+target_include_directories(glad PUBLIC include)
